Stable versions
---------------

3.3.1 ():
	- fix reported elapsed time with looped modules

3.3.0 (20101202):
	- change MED BPM mode tempo setting (reported by Lorence Lombardo)
	- fix OSS driver fragment setting
	- add interactive loop toggle (requested by Emanuel Haupt)
	- add filter to prevent loading NoiseRunner modules as Protracker
	- add NoiseRunner loader (requested by Johan Samuelsson)
	- add improved Impulse Tracker fingerprinting (from Schism Tracker)
	- add Archimedes Tracker StasisMod effects support (Tom Hargreaves)
	- add tarball decompressor (Tom Hargreaves)
	- limit uncompression recursion (Tom Hargreaves)
	- fix Tracker Packer 3 loader (Tom Hargreaves)
	- fix load issue with BoobieSqueezer XMs (reported by Null Vista)
	- fix modinfo tempo/bpm setting
	- fix Zip file detection (Tom Hargreaves)
	- fix Archimedes Tracker effects (Tom Hargreaves)
	- update Audacious plugin to API 16
	- code cleanup

3.2.0 (20100530):
	- Digital Symphony fixes by Tom Hargreaves
	- Archimedes Tracker fixes by Tom Hargreaves
	- add shared logarithmic volume table for Archimedes formats
	- fix default Archimedes formats pan (RLLR instead of LRRL)
	- add Coconizer file loader
	- portability fixes for BeOS and Haiku
	- code cleanup and optimizations
	- Android port using NDK
	- fix time echoback event for MED
	- fix module time count not reseting at new module
	- make zipfile detection stricter (by Solomon Peachy)
	- fix DSMI loader volume event (by Solomon Peachy)
	- initialize formats only once
	- fix build with Audacious plugin API 13
	- fix seek in Audacious plugin

3.1.0 (20100107):
	- implement MED4 instrument transposition
	- fix build with MSVC++ 2008
	- fix bogus information in winamp plugin file info display
	- fix Audacious plugin dialog stacking order (by Michael Schwendt)
	- add Titanics Player prowizard loader
	- add SKYT Packer prowizard loader
	- add Novotrade Packer prowizard loader
	- add Hornet Packer prowizard loader